--- a/cfiXML DataSheet Application/cfiXML_API/cfiXML_API.csproj
+++ b/cfiXML DataSheet Application/cfiXML_API/cfiXML_API.csproj
@@ -38,25 +38,14 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Altova, Version=1.0.5259.28592, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\Altova.dll</HintPath>
+    <Reference Include="Altova">
+      <HintPath>..\Dependencies\Altova.dll</HintPath>
     </Reference>
-    <Reference Include="AltovaXML, Version=1.0.5259.28592, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\AltovaXML.dll</HintPath>
+    <Reference Include="AltovaXML">
+      <HintPath>..\Dependencies\AltovaXML.dll</HintPath>
     </Reference>
-    <Reference Include="eqRotDoc, Version=1.0.5259.28602, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\eqRotDoc.dll</HintPath>
-    </Reference>
-    <Reference Include="Excel, Version=2.1.2.0, Culture=neutral, PublicKeyToken=93517dbe6a4012fa, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\Excel.dll</HintPath>
-    </Reference>
-    <Reference Include="ICSharpCode.SharpZipLib, Version=0.85.5.452, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\ICSharpCode.SharpZipLib.dll</HintPath>
+    <Reference Include="eqRotDoc">
+      <HintPath>..\Dependencies\eqRotDoc.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
