--- a/.gitignore
+++ b/.gitignore
@@ -184,4 +184,4 @@ FakesAssemblies/
 #Added by Vitor
 *.cache
 *.exe
-cfiXML_DataSheet_Application/ArquivosExemplo/
+cfiXML DataSheet Application/ArquivosExemplo/
