--- a/.gitignore
+++ b/.gitignore
@@ -184,4 +184,4 @@ FakesAssemblies/
 #Added by Vitor
 *.cache
 *.exe
-cfiXML DataSheet Application/ArquivosExemplo/
+PBCode/cfiXML DataSheet Application/ArquivosExemplo/
