--- a/.gitignore
+++ b/.gitignore
@@ -184,4 +184,4 @@ FakesAssemblies/
 #Added by Vitor
 *.cache
 *.exe
-PBCode/cfiXML DataSheet Application/ArquivosExemplo/
+cfiXML DataSheet Application/ArquivosExemplo/*
