--- a/.gitignore
+++ b/.gitignore
@@ -184,5 +184,8 @@ FakesAssemblies/
 #Added by Vitor
 *.cache
 *.exe
-cfiXML DataSheet Application/ArquivosExemplo/*
+cfiXML DataSheet Application/ArquivosExemplo/
+cfiXML DataSheet Application/ArquivosExemplo/*.xlsx
+cfiXML DataSheet Application/ArquivosExemplo/*.xlsm
+cfiXML DataSheet Application/ArquivosExemplo/*.xml
 cfiXML DataSheet Application/ArquivosExemplo/ultimateDictionary.xlsx
