--- a/.gitignore
+++ b/.gitignore
@@ -188,4 +188,4 @@ FakesAssemblies/
 "cfiXML DataSheet Application/ArquivosExemplo/*.xlsx"
 "cfiXML DataSheet Application/ArquivosExemplo/*.xlsm"
 "cfiXML DataSheet Application/ArquivosExemplo/*.xml"
-"cfiXML\ DataSheet\ Application/ArquivosExemplo/ultimateDictionary.xlsx"
+cfiXML\ DataSheet\ Application/ArquivosExemplo/ultimateDictionary.xlsx
