--- a/.gitignore
+++ b/.gitignore
@@ -188,8 +188,8 @@ FakesAssemblies/
 #"cfiXML DataSheet Application/ArquivosExemplo/"
 #"cfiXML DataSheet Application/ArquivosExemplo/*.xlsx"
 #"cfiXML DataSheet Application/ArquivosExemplo/*.xlsm"
-"cfiXML DataSheet Application"/ArquivosExemplo/
+#"cfiXML DataSheet Application"/ArquivosExemplo/
 
-cfiXML\ DataSheet\ Application/ArquivosExemplo/ultimateDictionary.xlsx
+#cfiXML\ DataSheet\ Application/ArquivosExemplo/ultimateDictionary.xlsx
 
-"cfiXML DataSheet Application"/ArquivosExemplo/*
+cfiXML\ DataSheet\ Application/ArquivosExemplo
