Mudando o nome da pasta do projeto e tentativa 16

--- a/.gitignore
+++ b/.gitignore
@@ -192,4 +192,4 @@ FakesAssemblies/
 
 #cfiXML\ DataSheet\ Application/ArquivosExemplo/ultimateDictionary.xlsx
 
-cfiXML\ DataSheet\ Application/ArquivosExemplo
+cfiXMLApp/ArquivosExemplo
